--- a/ide.html
+++ b/ide.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CodeHaven</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body style="font-family:monospace; background-color: #ffffff;">
 
@@ -47,6 +47,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.16.0/ext-language_tools.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.16.0/theme-monokai.min.js"></script>
     <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>
-    <script src="js/ide.js"></script>
+    <script src="ide.js"></script>
 </body>
 </html>
